# Mini-C-almost-compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  complex_test.c  test.sh
.github/workflows/: ci.yml
include/: error.h  lexer.h  parser.h  symbol_table.h  token.h
src/: error.cpp  grammar.txt  lexer.cpp  main.cpp  parser.cpp  symbol_table.cpp  token.cpp
tests/: CMakeLists.txt  test_lexer.cpp  test_main.cpp  test_parser.cpp  test_symbol_table.cpp
tests/test_files/: sample_program.c
